--- a/src/app/core/nav/nav.component.scss
+++ b/src/app/core/nav/nav.component.scss
@@ -67,12 +67,12 @@ $heightOnPhone: 56px;
     flex-direction: column;
     gap: 16px;
     padding: 8px 0;
+    overflow-y: auto;
   }
 
   :host-context(.laptop) & {
     align-items: flex-start;
     padding: 8px 16px;
-    overflow: auto;
   }
 }
 
